--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
       context: .
       args:
         - DEV=true
-    env_file:
-      - ./.env
+    # env_file:
+    #   - ./.env
     ports:
       - "8000:8000"
     volumes:
