--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,25 +12,27 @@ services:
       - "8000:8000"
     volumes:
       - ./app:/app
+    env_file:
+      - .env
     command: >
       sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
     # sh -c "python manage.py wait_for_db && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
-    # environment:
-    #   - DB_HOST=db
-    #   - DB_NAME=resume_db
-    #   - DB_USER=postgres
-    #   - DB_PASS=123456789
-    #   - DEBUG=1
-    # depends_on:
-    #   - db
-  # db:
-  #   image: postgres:13-alpine
-  #   volumes:
-  #     - postgres_data:/var/lib/postgresql/data/
-  #   environment:
-  #     - POSTGRES_DB=${DB_NAME}
-  #     - POSTGRES_USER=${DB_USERNAME}
-  #     - POSTGRES_PASSWORD=${DB_PASSWORD}
+    environment:
+      - DB_HOST=${DB_HOST}
+      - DB_NAME=${DB_NAME}
+      - DB_USER=${DB_USERNAME}
+      - DB_PASS=${DB_PASSWORD}
+      - DEBUG=${DEBUG}
+    depends_on:
+      - db
+  db:
+    image: postgres:13-alpine
+    volumes:
+      - dev-db-data:/var/lib/postgresql/data/
+    environment:
+      - POSTGRES_DB=${DB_NAME}
+      - POSTGRES_USER=${DB_USERNAME}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
 volumes:
   app:
-  #postgres_data:
+  dev-db-data:
