--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,22 +7,21 @@ services:
       args:
         - DEV=true
     # env_file:
-    #   - ./.env
+    #   - .env
     ports:
       - "8000:8000"
     volumes:
       - ./app:/app
-    env_file:
-      - .env
     command: >
-      sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
-    # sh -c "python manage.py wait_for_db && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+      sh -c "python manage.py test && 
+             python manage.py migrate &&
+             python manage.py runserver 0.0.0.0:8000"
     environment:
-      - DB_HOST=${DB_HOST}
-      - DB_NAME=${DB_NAME}
-      - DB_USER=${DB_USERNAME}
-      - DB_PASS=${DB_PASSWORD}
-      - DEBUG=${DEBUG}
+      - DB_HOST=db #${DB_HOST}
+      - DB_NAME=app
+      - DB_USER=postgres
+      - DB_PASS=123456789
+      - DEBUG=1
     depends_on:
       - db
   db:
@@ -30,9 +29,9 @@ services:
     volumes:
       - dev-db-data:/var/lib/postgresql/data/
     environment:
-      - POSTGRES_DB=${DB_NAME}
-      - POSTGRES_USER=${DB_USERNAME}
-      - POSTGRES_PASSWORD=${DB_PASSWORD}
+      - POSTGRES_DB=app
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=123456789
 volumes:
   app:
   dev-db-data:
