Add commands.md in root

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   app:
-    build: 
+    build:
       context: .
       args:
         - DEV=true
@@ -13,11 +13,11 @@ services:
     volumes:
       - ./app:/app
     command: >
-      sh -c "python manage.py test && 
+      sh -c "python manage.py test &&
              python manage.py migrate &&
              python manage.py runserver 0.0.0.0:8000"
     environment:
-      - DB_HOST=db #${DB_HOST}
+      - DB_HOST=db
       - DB_NAME=app
       - DB_USER=postgres
       - DB_PASS=123456789
@@ -26,8 +26,11 @@ services:
       - db
   db:
     image: postgres:13-alpine
+    ports:
+      - "5432:5432"
     volumes:
       - dev-db-data:/var/lib/postgresql/data/
+      - ./postgres/config:/etc/postgresql
     environment:
       - POSTGRES_DB=app
       - POSTGRES_USER=postgres
